fix hero signin open modal, fix var z-index modal

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -35,8 +35,7 @@
   --letter-spacing-body: -0.02em;
 
   --border-radius-small: 20px;
-
   --border-radius-regular: 30px;
 
-  --border-radius-regular: 30px --modal-z-index: 999;
+  --modal-z-index: 999;
 }
